Fix layout shift for images

--- a/src/assets/css/logo.css
+++ b/src/assets/css/logo.css
@@ -27,5 +27,6 @@
 
 .logo__pictureImg {
   display: block;
-  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
