--- a/src/assets/css/picture.css
+++ b/src/assets/css/picture.css
@@ -26,7 +26,8 @@
 
 .picture__image {
   display: block;
-  width: 100%;
+  max-width: 100%;
+  height: auto;
   position: relative;
   z-index: 1;
   border-radius: 1em;
